frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: nodetestregistery.azurecr.io/frontend:latest
          ports:
            - containerPort: 3000
