frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend-service
spec:
  selector:
    app: admin-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer  # Use LoadBalancer for external access, or NodePort for testing purposes
